[MediaPlayerSettings] Make strings start with uppercase letter
All existing translations are updated and converted to uppercase.

--- a/po/hr.po
+++ b/po/hr.po
@@ -11302,8 +11302,8 @@ msgstr "izbrišite ovu oznaku"
 msgid "rename entry"
 msgstr "preimenuj unos"
 
-msgid "repeat playlist"
-msgstr "ponovite popis pjesama"
+msgid "Repeat playlist"
+msgstr "Ponovite popis pjesama"
 
 msgid "repeated"
 msgstr "ponavljati"
@@ -11338,11 +11338,11 @@ msgstr "romantika"
 msgid "running"
 msgstr "pokrenut"
 
-msgid "save last directory on exit"
-msgstr "spremite zadnji direktorij na izlazu"
+msgid "Save last directory on exit"
+msgstr "Spremite zadnji direktorij na izlazu"
 
-msgid "save playlist on exit"
-msgstr "spremite popis za reprodukciju na izlazu"
+msgid "Save playlist on exit"
+msgstr "Spremite popis za reprodukciju na izlazu"
 
 msgid "scan state"
 msgstr "status pretraživanja"
@@ -11389,8 +11389,8 @@ msgstr "prikaži alternative"
 msgid "show event details"
 msgstr "prikaži pojedinosti o događaju"
 
-msgid "show mediaplayer on mainmenu"
-msgstr "pokaži media player na glavnom izborniku"
+msgid "Show media player on main menu"
+msgstr "Pokaži media player na glavnom izborniku"
 
 msgid "show softwaremanager in setup menu"
 msgstr "pokaži upravitelja softvera u izborniku postavki"
@@ -11468,8 +11468,8 @@ msgstr "društvena/politička pitanja/ekonomija (općenito)"
 msgid "social/spiritual science"
 msgstr "društvena/duhovna znanost"
 
-msgid "sorting of playlists"
-msgstr "sortiranje popisa za reprodukciju"
+msgid "Sorting of playlists"
+msgstr "Sortiranje popisa za reprodukciju"
 
 msgid "special events"
 msgstr "specijalni događaji"
@@ -11489,8 +11489,8 @@ msgstr "standard"
 msgid "start cut here"
 msgstr "počnite izrezivati ovdje"
 
-msgid "start directory"
-msgstr "početi imenik"
+msgid "Start directory"
+msgstr "Početi imenik"
 
 msgid "starts in a few seconds"
 msgstr "počinje za nekoliko sekundi"
