--- a/po/hr.po
+++ b/po/hr.po
@@ -43,7 +43,7 @@ msgstr ""
 
 msgid ""
 "\n"
-"Edit the upgrade source address."
+"Edit the update source address."
 msgstr ""
 "\n"
 "Uredite adresu za nadogradnje."
@@ -2964,7 +2964,7 @@ msgstr "Želite li ažurirati svoj prijemnik na %s?"
 msgid "Do you want to update your receiver?"
 msgstr "Želite li ažurirati svoj prijemnik?"
 
-msgid "Do you want to upgrade the package:\n"
+msgid "Do you want to update the package:\n"
 msgstr "Želite li nadograditi paket:\n"
 
 msgid "Dolby"
@@ -2997,8 +2997,8 @@ msgid "Done"
 msgstr "Gotovo"
 
 #, python-format
-msgid "Done - Installed, upgraded or removed %d package (%s)"
-msgid_plural "Done - Installed, upgraded or removed %d packages (%s)"
+msgid "Done - Installed, updated or removed %d package (%s)"
+msgid_plural "Done - Installed, updated or removed %d packages (%s)"
 msgstr[0] "Gotovo - Instaliran, ažuriran ili uklonjen  %d paket (%s)"
 msgstr[1] "Gotovo - Instalirane, ažurirane ili uklonjene  %d pakete (%s)"
 msgstr[2] "Gotovo - Instalirani, ažurirani ili uklonjeni  %d paketi (%s)"
@@ -3101,7 +3101,7 @@ msgstr "Uredite tajmer"
 msgid "Edit title"
 msgstr "Uredite titlove"
 
-msgid "Edit upgrade source url."
+msgid "Edit update source url."
 msgstr "Uredite url izvornog ažuriranja."
 
 msgid "Education/Science/..."
@@ -4655,13 +4655,13 @@ msgstr "Zadnja konfiguracija"
 msgid "Last speed"
 msgstr "Zadnja brzina"
 
-msgid "Last upgrade: "
+msgid "Last update: "
 msgstr "Zadnja nadogradnja: "
 
 msgid "Latest Commits"
 msgstr "Najnovije objave"
 
-msgid "Latest upgrade log"
+msgid "Latest update log"
 msgstr "Zadnjii dnevnik nadogradnje"
 
 msgid "Latitude"
@@ -5676,7 +5676,7 @@ msgstr "Opći napredak:"
 msgid "Overscan wizard"
 msgstr "Vodič za postavljanje skaliranja"
 
-msgid "Overwrite configuration files during software upgrade?"
+msgid "Overwrite configuration files during software update?"
 msgstr "Prebrisati konfiguracijske datoteke tijekom ažuriranja softvera?"
 
 msgid "Overwrite configuration files?"
@@ -6467,10 +6467,10 @@ msgstr "Dali stvarno želite sada isključiti?"
 msgid "Really store at index %2d for current position?"
 msgstr "Dali stvarno želite pohraniti u indeksu %2d za trenutnu poziciju?"
 
-msgid "Really upgrade the frontprocessor and reboot now?"
+msgid "Really update the frontprocessor and reboot now?"
 msgstr "Dali stvarno želite nadograditi frontprocessor i ponovno pokrenuti sustav?"
 
-msgid "Really upgrade your settop box and reboot now?"
+msgid "Really update your settop box and reboot now?"
 msgstr "Dali stvarno želite nadograditi svoj STB i ponovno pokrenuti sustav?"
 
 msgid "Reboot"
@@ -7376,10 +7376,10 @@ msgstr "Odaberite skup znakova pomaknutih virtualnom tipkovnicom"
 msgid "Select the virtual keyboard shifted character set for the next character only"
 msgstr "Odaberite skup znakova virtualne tipkovnice pomaknut samo za sljedeći znak"
 
-msgid "Select upgrade source"
+msgid "Select update source"
 msgstr "Odaberite izvor ažuriranja"
 
-msgid "Select upgrade source to edit."
+msgid "Select update source to edit."
 msgstr "Odaberite izvor ažuriranja za uređivanje."
 
 msgid "Select video input with up/down buttons"
@@ -7766,7 +7766,7 @@ msgstr "Prikažite info traku pri preskakanju naprijed/natrag"
 msgid "Show latest commits"
 msgstr "Prikažite najnovije objave"
 
-msgid "Show latest upgrade log"
+msgid "Show latest update log"
 msgstr "Prikažite posljednji log ažuriranja"
 
 msgid "Show menu or plugin numbers"
@@ -7799,7 +7799,7 @@ msgstr "Prikažite obavijest kada uvoz kanala nije uspio"
 msgid "Show notification when import channels was successful"
 msgstr "Prikažite obavijest kada je uvoz kanala uspio"
 
-msgid "Show packages to be upgraded"
+msgid "Show packages to be updated"
 msgstr "Prikažite pakete koje treba nadograditi"
 
 msgid "Show picons in channel selection list"
@@ -9359,7 +9359,7 @@ msgid "Unable to create the required directories on the media (e.g. USB stick or
 msgstr "Nije moguće kreirati potrebne direktorije na mediju (npr. USB stick ili HDD) - Provjerite medije i pokušajte ponovo!"
 
 msgid ""
-"Unattended upgrade in progress\n"
+"Unattended update in progress\n"
 "Please wait until your receiver reboots\n"
 "This may take a few minutes"
 msgstr ""
@@ -9473,7 +9473,7 @@ msgstr "Ažuriranje feeda nije dostupno."
 msgid "Updating software catalog"
 msgstr "Ažuriranje kataloga softvera"
 
-msgid "Upgrading"
+msgid "Updating"
 msgstr "Ažuriranje"
 
 msgid "Upper case"
@@ -9932,7 +9932,7 @@ msgstr "Zapadna Sahara"
 msgid "What type of service scan do you want?"
 msgstr "Koju vrstu skeniranja usluga želite?"
 
-msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are upgraded"
+msgid "When enabled enigma2 will load unlinked userbouquets. This means that userbouquets that are available, but not included in the bouquets.tv or bouquets.radio files, will still be loaded. This allows you for example to keep your own user bouquet while installed settings are updated"
 msgstr "Kada je omogućeno enigma2 učitat će nepovezane korisničke pakete. To znači da će korisnički paketi koji su dostupni, ali nisu uključeni u bouquets.tv ili bouquets.radio datoteke, i dalje biti učitani. To vam omogućuje, primjerice, da zadržite vlastiti korisnički paket dok su instalirane postavke nadograđene."
 
 msgid "When enabled the PiP can be closed by the exit button."
@@ -10363,7 +10363,7 @@ msgid "Your current collection will get lost!"
 msgstr "Vaša trenutna kolekcija će se izgubiti!"
 
 msgid ""
-"Your frontprocessor will be upgraded\n"
+"Your frontprocessor will be updated\n"
 "Please wait until your receiver reboots\n"
 "This may take a few minutes"
 msgstr ""
