--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -156,7 +156,7 @@ msgid " (higher than any auto)"
 msgstr " （比所有转速都高）"
 
 msgid " (higher than rotor any auto)"
-msgstr " （比所有转子转速都高）"
+msgstr " （比所有马达转速都高）"
 
 msgid " (lower than any auto)"
 msgstr " （比所有转速都低）"
@@ -986,10 +986,10 @@ msgid "Allow quitting movieplayer with exit"
 msgstr "允许使用exit推出电影播放器"
 
 msgid "Allow subtitle language to equal audio language"
-msgstr "允许字母语言匹配音轨语言"
+msgstr "允许字幕语言等于音轨语言"
 
 msgid "Allow subtitles for hearing impaired"
-msgstr "允许为听力受损者启用字幕"
+msgstr "允许为听障者提供辅助字幕"
 
 msgid "Allow unsupported modes"
 msgstr "允许不支持的模式"
@@ -1206,7 +1206,7 @@ msgstr "音频PID"
 
 #, python-format
 msgid "Audio PID%s, codec & lang"
-msgstr "音频PID%s, 编解码器和语言"
+msgstr "音频PID%s，编解码器和语言"
 
 msgid "Audio PID, codec & lang"
 msgstr "音频PID,编解码器和语言"
@@ -1215,10 +1215,10 @@ msgid "Audio auto volume level"
 msgstr "音频自动音量"
 
 msgid "Audio language selection 1"
-msgstr "自动语言1"
+msgstr "音轨语言选择1"
 
 msgid "Audio language selection 2"
-msgstr "自动语言2"
+msgstr "音轨语言选择2"
 
 msgid "Audio language selection 3"
 msgstr "自动语言3"
@@ -2130,10 +2130,10 @@ msgid ""
 msgstr "配置当接收机需要关机以确保接收机进入待机模式时的持续时间。"
 
 msgid "Configure the first audio language (highest priority)."
-msgstr "配置默认音频语言。"
+msgstr "配置第一音轨语言（最高优先级）。"
 
 msgid "Configure the first subtitle language (highest priority)."
-msgstr "配置默认字幕语言。"
+msgstr "配置第一字幕语言（最高优先级）。"
 
 msgid "Configure the font size of the subtitles."
 msgstr "配置字幕字体大小。"
@@ -2213,22 +2213,22 @@ msgstr ""
 "配置离线解码延迟时间（毫秒）。此配置延迟用以观察每个控制字奇偶校验变化。"
 
 msgid "Configure the possible fast forward speeds."
-msgstr "配置允许快进速度。"
+msgstr "配置合适的快进速度。"
 
 msgid "Configure the possible rewind speeds."
-msgstr "配置允许快退速度。"
+msgstr "配置合适的倒带速度。"
 
 msgid "Configure the primary EPG language."
-msgstr "配置初始EPG语言。"
+msgstr "配置主EPG语言。"
 
 msgid "Configure the refresh rate of the screen."
-msgstr "配置屏幕刷新率。"
+msgstr "配置屏幕刷新频率。"
 
 msgid "Configure the screen resolution in PC output mode."
-msgstr "配置pc输出模式是屏幕分辨率。"
+msgstr "在PC输出模式下配置屏幕分辨率。"
 
 msgid "Configure the second audio language."
-msgstr "配置第二音频语言。"
+msgstr "配置第二音轨语言。"
 
 msgid "Configure the second subtitle language."
 msgstr "配置第二字幕语言。"
@@ -2237,7 +2237,7 @@ msgid "Configure the secondary EPG language."
 msgstr "配置第二EPG语言。"
 
 msgid "Configure the sharpness of the video scaling."
-msgstr "配置视频缩放清晰度。"
+msgstr "配置视频缩放的清晰度。"
 
 msgid "Configure the skip time interval for the '1'/'3' buttons."
 msgstr "配置 '1'/'3' 键跳过时间间隔。"
@@ -2327,7 +2327,7 @@ msgstr "配置多音轨频道是否缩混音频为立体声。"
 
 msgid ""
 "Configure whether or not a rotor position will be displayed on the infobar"
-msgstr "配置信息条上是否显示定位器位置信息"
+msgstr "配置信息条上是否显示马达位置信息"
 
 msgid ""
 "Configure whether or not an icon should be shown when your motorized dish is "
@@ -2534,7 +2534,7 @@ msgid "Current mode: %s \n"
 msgstr "当前模式：%s\n"
 
 msgid "Current rotor position: "
-msgstr "当前转子位置: "
+msgstr "当前马达位置: "
 
 msgid "Current settings:"
 msgstr "当前设置:"
@@ -2918,13 +2918,13 @@ msgid "Disk space to reserve for recordings (in GB)"
 msgstr "为录像保留磁盘空间(GB)"
 
 msgid "Display 16:9 content as"
-msgstr "显示16:9内容"
+msgstr "显示 16:9 内容为"
 
 msgid "Display 4:3 content as"
-msgstr "显示 4:3 内容模式为"
+msgstr "显示 4:3 内容为"
 
 msgid "Display >16:9 content as"
-msgstr "显示16:9内容模式为"
+msgstr "显示 >16:9 内容为"
 
 msgid "Display EPG as MultiEPG"
 msgstr ""
@@ -3147,13 +3147,13 @@ msgid "Dynamic contrast"
 msgstr "动态对比度"
 
 msgid "E"
-msgstr "E"
+msgstr ""
 
 msgid "ECM Info"
 msgstr "ECM 信息"
 
 msgid "EPG"
-msgstr "EPG"
+msgstr ""
 
 msgid "EPG language selection 1"
 msgstr "EPG自动语言1"
@@ -3233,7 +3233,7 @@ msgid "Electronic Program Guide"
 msgstr "电子节目指南"
 
 msgid "Embedded"
-msgstr ""
+msgstr "嵌入"
 
 msgid "Empty slot"
 msgstr ""
@@ -4682,7 +4682,7 @@ msgid "Invert"
 msgstr "反向"
 
 msgid "Ipkg"
-msgstr "Ipkg"
+msgstr ""
 
 msgid "Iran (Islamic Republic of)"
 msgstr ""
@@ -4736,7 +4736,7 @@ msgid "Items per page for list screen"
 msgstr "屏幕列表项目数"
 
 msgid "J"
-msgstr "J"
+msgstr ""
 
 msgid "Jamaica"
 msgstr ""
@@ -4833,7 +4833,7 @@ msgid "Lao People's Democratic Republic"
 msgstr ""
 
 msgid "Large"
-msgstr "长"
+msgstr "大"
 
 msgid "Last config"
 msgstr "上次配置"
@@ -5171,7 +5171,7 @@ msgid "Message"
 msgstr "消息"
 
 msgid "Message..."
-msgstr "消息。。。"
+msgstr "消息..."
 
 msgid "Messages"
 msgstr "信息"
@@ -5201,7 +5201,7 @@ msgstr "设置模式"
 
 msgctxt "Video output mode"
 msgid "Mode"
-msgstr "输出模式"
+msgstr "视频输出模式"
 
 msgid "Model"
 msgstr "型号"
@@ -5342,7 +5342,7 @@ msgid "Mozambique"
 msgstr ""
 
 msgid "Multi EPG"
-msgstr "Multi-EPG"
+msgstr ""
 
 msgid "Multi channel downmix"
 msgstr "多个频道缩混"
@@ -5399,7 +5399,7 @@ msgid "NOW"
 msgstr "现在"
 
 msgid "NTSC"
-msgstr "NTSC"
+msgstr ""
 
 msgid "Name"
 msgstr "名称"
@@ -5787,7 +5787,7 @@ msgid "OK"
 msgstr "确定"
 
 msgid "ONID"
-msgstr "ONID"
+msgstr ""
 
 msgid "OSD 3D setup"
 msgstr "OSD 3D 设置"
@@ -5887,7 +5887,7 @@ msgid "Original"
 msgstr "原始"
 
 msgid "Other"
-msgstr "天气"
+msgstr "其他"
 
 msgid "Other Subtitles & lang"
 msgstr "其他字幕和语言"
@@ -5908,16 +5908,16 @@ msgid "Overwrite configuration files?"
 msgstr "覆盖配置文件？"
 
 msgid "PAL"
-msgstr "PAL"
+msgstr ""
 
 msgid "PCM"
 msgstr ""
 
 msgid "PCR PID"
-msgstr "PCR PID"
+msgstr ""
 
 msgid "PDC"
-msgstr "PDC"
+msgstr ""
 
 msgid "PGS File"
 msgstr ""
@@ -5929,7 +5929,7 @@ msgid "PIN code needed"
 msgstr "需要PIN码"
 
 msgid "PLP ID"
-msgstr "PLP ID"
+msgstr ""
 
 msgid "PLS Code"
 msgstr "PLS代码"
@@ -5938,7 +5938,7 @@ msgid "PLS Mode"
 msgstr "PLS模式"
 
 msgid "PMT PID"
-msgstr "PMT PID"
+msgstr ""
 
 msgid "PPanel"
 msgstr "ppanel面板"
@@ -6414,22 +6414,22 @@ msgid "Predefined transponder"
 msgstr "预设置转发器"
 
 msgid "Prefer AC3 track"
-msgstr "更好AC3音轨"
+msgstr "首选AC3音轨"
 
 msgid "Prefer AC3+ track"
-msgstr "更好的AC3+音轨"
+msgstr "首选AC3+音轨"
 
 msgid "Prefer audio track stored by service"
-msgstr "服务商提供的搞好的音轨"
+msgstr "首选按服务存储的音轨"
 
 msgid "Prefer graphical DVB subtitles"
-msgstr "更好的DVB图形字幕"
+msgstr "首选图形DVB字幕"
 
 msgid "Prefer subtitles for hearing impaired"
-msgstr "更好适用于听力受损者的字幕"
+msgstr "首选听障辅助字幕"
 
 msgid "Prefer subtitles stored by service"
-msgstr "服务商提供的更好的字幕"
+msgstr "首选按服务存储的字幕"
 
 msgid "Preferred tuner"
 msgstr "首选调谐器"
@@ -6633,7 +6633,7 @@ msgid "Put TV in standby"
 msgstr "待机"
 
 msgid "Put receiver in standby"
-msgstr "A设置机顶盒待机"
+msgstr "设置机顶盒待机"
 
 msgid "Python frontend for /tmp/mmi.socket"
 msgstr "Python的前端 /tmp/mmi.socket"
@@ -7059,7 +7059,7 @@ msgid "Rotor turning speed"
 msgstr "马达转速"
 
 msgid "Rotor: "
-msgstr "旋转器: "
+msgstr "马达: "
 
 msgid "Round start time on"
 msgstr "环绕开始时间"
@@ -7513,16 +7513,16 @@ msgid "Select channel to record from"
 msgstr "选择要录制的频道"
 
 msgid "Select copy destination for:"
-msgstr "选择目标位置:"
+msgstr "选择复制目标位置:"
 
 msgid "Select destination for:"
-msgstr "目标目录:"
+msgstr "选择目标目录:"
 
 msgid "Select directory for logfile"
 msgstr "选择日志文件的目录"
 
 msgid "Select files for backup."
-msgstr "选择 文件/目录 备份。。。"
+msgstr "选择需要备份的文件或目录。"
 
 msgid "Select files/folders to backup"
 msgstr "选择 文件/目录 备份。。。"
@@ -8014,7 +8014,7 @@ msgid "Show EPG for current channel..."
 msgstr "为当前频道启用EPG"
 
 msgid "Show EPG..."
-msgstr "显示EPG。。。"
+msgstr "显示EPG..."
 
 msgid "Show Games show"
 msgstr "显示解密"
@@ -10054,8 +10054,8 @@ msgid ""
 "subtitles will not be used. Enable this option to allow these subtitles to "
 "be used."
 msgstr ""
-"通常，当字幕语言相同于音频语言时，字幕将不会被使用，启用此选项可以吮吸此情况"
-"下字幕被允许使用。"
+"通常，当字幕语言与音轨语言相同时，将不使用字幕。启用此选项可允许使用这些字"
+"幕。"
 
 msgid "Uzbekistan"
 msgstr ""
@@ -10126,7 +10126,7 @@ msgid "Video mode selection."
 msgstr "选择视频模式。"
 
 msgid "Video output"
-msgstr "视频输出"
+msgstr "视频输出端口"
 
 msgid "Video setup"
 msgstr "视频设置"
@@ -10142,7 +10142,7 @@ msgid "VideoMode"
 msgstr "视频模式"
 
 msgid "Videocodec, size & format"
-msgstr "视频编解码器、大小和格式"
+msgstr "视频编解码器，大小和格式"
 
 msgid "Viet Nam"
 msgstr ""
@@ -10581,7 +10581,7 @@ msgstr "一旦启用，有可能可以使用exit键退出电影播放器。"
 msgid ""
 "When enabled, measure power consumption to detect when the rotor stops "
 "turning (when supported by the tuner)."
-msgstr "一旦启用，转子停止转动时，电量功耗检测将由调谐器支持。"
+msgstr "一旦启用，马达停止转动时，电量功耗检测将由调谐器支持。"
 
 msgid "When enabled, number markers will be hidden."
 msgstr "一旦启用，标记数字标签将会被隐藏。"
@@ -10656,7 +10656,7 @@ msgid "When enabled, the receiver will select an AC3 track (when available)."
 msgstr "一旦启用，接收机将选择AC3音轨（如果可用的话）"
 
 msgid "When enabled, the receiver will select an AC3+ track (when available)."
-msgstr "一旦启用，接收机将选择AC3音轨（如果可用的话）"
+msgstr "一旦启用，接收机将选择AC3+音轨（如果可用的话）"
 
 msgid ""
 "When enabled, this setting has more weight than 'Preferred tuner for "
@@ -11095,7 +11095,7 @@ msgid "Zgemma H9/i55 Plus"
 msgstr ""
 
 msgid "Zgemma Star S/2S/H1/H2"
-msgstr "Zgemma Star S/2S/H1/H2"
+msgstr ""
 
 msgid "Zimbabwe"
 msgstr ""
@@ -12206,10 +12206,10 @@ msgid "vertical"
 msgstr "垂直"
 
 msgid "wait for ci..."
-msgstr "等待CI。。。"
+msgstr "等待CI..."
 
 msgid "wait for mmi..."
-msgstr "等待mmi。。。"
+msgstr "等待mmi..."
 
 msgid "waiting"
 msgstr "等待"
