--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -1206,7 +1206,7 @@ msgstr "音频PID"
 
 #, python-format
 msgid "Audio PID%s, codec & lang"
-msgstr "音频PID%s，编解码器和语言"
+msgstr "音频PID%s,编解码器和语言"
 
 msgid "Audio PID, codec & lang"
 msgstr "音频PID,编解码器和语言"
@@ -1393,7 +1393,7 @@ msgid "Barbados"
 msgstr ""
 
 msgid "Basic PID info"
-msgstr ""
+msgstr "基本PID信息"
 
 msgid "Basque"
 msgstr "巴斯克"
@@ -1905,7 +1905,7 @@ msgid "Combo"
 msgstr ""
 
 msgid "Command execution..."
-msgstr "执行命令。。。"
+msgstr "执行命令..."
 
 msgid "Command order"
 msgstr "命令顺序"
@@ -1926,7 +1926,7 @@ msgid "Comoros"
 msgstr ""
 
 msgid "Compact flash"
-msgstr "紧密刷写"
+msgstr "闪存卡"
 
 msgid "Complete"
 msgstr "全部转发器"
@@ -3686,7 +3686,7 @@ msgid "Extra start time to ignore inactivity sleeptimer"
 msgstr "忽略非活动状态睡眠定时器的额外开始时间。"
 
 msgid "F"
-msgstr "F"
+msgstr ""
 
 msgid "F1/F3/F4/F4-TURBO"
 msgstr ""
@@ -3756,7 +3756,7 @@ msgid "Failed to write /tmp/positionersetup.log: "
 msgstr "写入/tmp/positionersetup.log失败！"
 
 msgid "Failed:"
-msgstr "失败："
+msgstr "失败:"
 
 msgid "Falkland Islands (Malvinas)"
 msgstr ""
@@ -4080,7 +4080,7 @@ msgid "Goto 0"
 msgstr "转到 0"
 
 msgid "Goto X"
-msgstr "转到X"
+msgstr "转到 X"
 
 msgid "Goto index position"
 msgstr "转到索引位置"
@@ -4167,7 +4167,7 @@ msgid "HD list"
 msgstr "高清列表"
 
 msgid "HD2400"
-msgstr "HD2400"
+msgstr ""
 
 msgid "HDMI"
 msgstr ""
@@ -4341,7 +4341,7 @@ msgid "Hungary"
 msgstr ""
 
 msgid "I"
-msgstr "I"
+msgstr ""
 
 msgid "I do not want to perform any service scans"
 msgstr "我不想执行任何服务扫描"
@@ -5028,7 +5028,7 @@ msgid "Luxembourgish"
 msgstr "卢森堡"
 
 msgid "MMC card"
-msgstr "SD/MMC"
+msgstr "MMC卡"
 
 msgid "MORE"
 msgstr "更多"
@@ -5126,7 +5126,7 @@ msgid "Mauritius"
 msgstr ""
 
 msgid "Max memory positions"
-msgstr "最大存储位置"
+msgstr "最大内存位置"
 
 msgid "Max. bitrate: "
 msgstr "最大比特率: "
@@ -6801,7 +6801,7 @@ msgid "Reload blacklists"
 msgstr "重新加载黑名单"
 
 msgid "Reloading bouquets and services..."
-msgstr "重载自定义组和频道。。。"
+msgstr "重载自定义组和频道..."
 
 msgid "Remember last service in PiP"
 msgstr "记住最近画中画频道"
@@ -6955,7 +6955,7 @@ msgid "Restart cardserver"
 msgstr "重启解密卡"
 
 msgid "Restart enigma"
-msgstr "重启Enigma2"
+msgstr "重启用户界面"
 
 msgid "Restart enigma in debug mode"
 msgstr "重启调试模式"
@@ -7074,7 +7074,7 @@ msgid "Rwanda"
 msgstr ""
 
 msgid "S-Video"
-msgstr "S-Video"
+msgstr ""
 
 msgid "SCPC optimized search range"
 msgstr "SCPC优化搜索范围"
@@ -7104,19 +7104,19 @@ msgid "SPDIF"
 msgstr ""
 
 msgid "SRT File"
-msgstr ""
+msgstr "SRT文件"
 
 msgid "SRT file"
 msgstr "SRT文件"
 
 msgid "SSA File"
-msgstr ""
+msgstr "SSA文件"
 
 msgid "SSA file"
 msgstr "SSA文件"
 
 msgid "SSID:"
-msgstr "SSID:"
+msgstr ""
 
 msgid "Saint Barthelemy"
 msgstr ""
@@ -10142,7 +10142,7 @@ msgid "VideoMode"
 msgstr "视频模式"
 
 msgid "Videocodec, size & format"
-msgstr "视频编解码器，大小和格式"
+msgstr "视频编解码器,大小和格式"
 
 msgid "Viet Nam"
 msgstr ""
