Greek translation update 13/10/2019

--- a/po/el.po
+++ b/po/el.po
@@ -747,10 +747,10 @@ msgid "A/V settings"
 msgstr "Ρυθμίσεις εικόνας/ήχου"
 
 msgid "AAC downmix"
-msgstr "Μίξη AAC"
+msgstr "Αποκωδικοποίηση & μίξη AAC"
 
 msgid "AC3 downmix"
-msgstr "Μίξη AC3"
+msgstr "Αποκωδικοποίηση & μίξη AC3"
 
 msgid "ACQUIRING TSID/ONID"
 msgstr "ΛΗΨΗ TSID/ONID"
@@ -2459,7 +2459,7 @@ msgid "DMM normal"
 msgstr "DMM κανονικό"
 
 msgid "DTS downmix"
-msgstr "Μίξη DTS"
+msgstr "Αποκωδικοποίηση & μίξη DTS"
 
 msgid "DUAL LAYER DVD"
 msgstr "DVD ΔΙΠΛΗΣ ΣΤΡΩΣΗΣ"
@@ -3284,7 +3284,7 @@ msgid "Enter your current latitude. This is the number of degrees you are from t
 msgstr "Εισάγετε το τo γεωγραφικό σας πλάτος. Αυτός είναι ο αριθμός σε δεκαδικές μοίρες που δείχνει πόσο απέχετε από τον ισημερινό."
 
 msgid "Enter your current longitude. This is the number of degrees you are from zero meridian as a decimal."
-msgstr "Εισάγετε το γεωγραφικό σας μήκος. Αυτός είναι ο αριθμός σε δεκαδικές μοίρες που δείχνει πόσο απέχετε από το μηδενικό μεσημβρινό."
+msgstr "Εισάγετε το γεωγραφικό σας μήκος. Αυτός είναι ο αριθμός σε δεκαδικές μοίρες που δείχνει πόσο απέχετε από τον μηδενικό μεσημβρινό."
 
 msgid "Enter your high band local oscillator frequency. For more information consult the spec sheet of your LNB."
 msgstr "Εισάγετε τη συχνότητα ταλάντωσης της υψηλής μπάντας. Για περισσότερες πληροφορίες ανατρέξτε στον πίνακα χαρακτηριστικών του LNB σας."
@@ -5344,7 +5344,7 @@ msgid "No displayable files on this medium found!"
 msgstr "Δεν υπάρχουν αρχεία προς εμφάνιση σε αυτό το μέσο!"
 
 msgid "No epg.dat file found server"
-msgstr "Δεν βρέθηκε το αρχείο epg.dat στο διακομιστή"
+msgstr "Δεν βρέθηκε το αρχείο epg.dat στον διακομιστή"
 
 msgid "No event info found, recording indefinitely."
 msgstr "Δεν βρέθηκαν πληροφορίες προγράμματος, η εγγραφή δεν θα σταματήσει."
@@ -5509,7 +5509,7 @@ msgid "Not tested:"
 msgstr "Μη δοκιμασμένο:"
 
 msgid "Note: when enabled, and you do want standby mode after wake up, set option 'Startup to Standby' as 'No, except Wakeup timer'."
-msgstr "Σημείωση: όταν είναι ενεργό, και θέλετε λειτουργία αναμονής μετά την αφύπνιση, θέστε την επιλογή στο \"Εκκίνηση από Αναμονή\" στο \"Όχι, εκτός του χρονοδιακόπτη αφύπνισης\"."
+msgstr "Σημείωση: όταν είναι ενεργό, και θέλετε λειτουργία αναμονής μετά την αφύπνιση, θέστε την επιλογή στο \"Εκκίνηση σε αναμονή\" στο \"Όχι, εκτός του χρονοδιακόπτη αφύπνισης\"."
 
 msgid ""
 "Nothing to scan!\n"
@@ -5592,7 +5592,7 @@ msgid "One"
 msgstr "Ένα"
 
 msgid "Only change this setting if you are using a SCR device that has been reprogrammed with a custom programmer. For further information check with the person that reprogrammed the device."
-msgstr "Αλλάξτε αυτή τη ρύθμιση μόνο αν χρησιμοποιείτε μία συσκευή SCR που έχει προγραμματιστεί χειροκίνητα. Για περισσότερες πληροφορίες ελέγξτε με το άτομο που αναπρογραμμάτισε τη συσκευή."
+msgstr "Αλλάξτε αυτή τη ρύθμιση μόνο αν χρησιμοποιείτε μία συσκευή SCR που έχει επαναπρογραμματιστεί χειροκίνητα. Για περισσότερες πληροφορίες ελέγξτε με το άτομο που επαναπρογραμμάτισε τη συσκευή."
 
 msgid "Only extensions."
 msgstr "Μόνο επεκτάσεις."
@@ -7325,13 +7325,13 @@ msgid "Select the satellite you want to configure. Once that satellite is config
 msgstr "Επιλέξτε τον δορυφόρο που θέλετε να ρυθμίσετε. Μετά τη ρύθμιση αυτή μπορείτε να επιλέξετε να ρυθμιστούν και άλλοι δορυφόροι για αυτό το tuner."
 
 msgid "Select the satellite your dish receives from. If you are unsure select 'automatic' and the receiver will attempt to determine this for you."
-msgstr "Επιλέξτε τον δορυφόρο που έχει συνδεθεί στο tuner σας. Αν δεν είστε σίγουροι επιλέξτε 'αυτόματο' και ο δέκτης θα προσπαθήσει να βρει τη σωστή ρύθμιση."
+msgstr "Επιλέξτε τον δορυφόρο από τον οποίο λαμβάνει η δορυφορική σας κεραία. Αν δεν είστε σίγουροι επιλέξτε 'αυτόματο' και ο δέκτης θα προσπαθήσει να βρει τη σωστή ρύθμιση."
 
 msgid "Select the tuner that controls the motorised dish."
 msgstr "Επιλέξτε το tuner που ελέγχει το μοτέρ που κινεί το κάτοπτρο."
 
 msgid "Select the tuner that this loopthrough depends on."
-msgstr "Επιλέξτε το tuner στο οποίο βασίζεται το αυτή η γέφυρα loop."
+msgstr "Επιλέξτε το tuner στο οποίο βασίζεται αυτή η γέφυρα loop."
 
 msgid "Select the tuner to which the signal cable of the SCR device is connected."
 msgstr "Επιλέξτε το tuner στο οποίο είναι συνδεδεμένο το καλώδιο σήματος της SCR συσκευής σας."
@@ -7376,7 +7376,7 @@ msgid "Select your country. If not available select 'all'."
 msgstr "Επιλέξτε τη χώρα σας. Αν δεν είναι διαθέσιμη επιλέξτε 'όλες'."
 
 msgid "Select your provider and region. If not present in this list you will need to select one of the other 'service scan types'."
-msgstr "Επιλέξτε τον πάροχο και την περιοχή σας. Αν δεν υπάρχουν στη λίστα θα χρειαστεί να επιλέξετε άλλο από το 'τύποι ανίχνευσης υπηρεσιών'."
+msgstr "Επιλέξτε τον πάροχο και την περιοχή σας. Αν δεν υπάρχουν στη λίστα θα χρειαστεί να επιλέξετε άλλον από το 'τύποι ανίχνευσης υπηρεσιών'."
 
 msgid "Select your provider, and press OK to start the scan"
 msgstr "Επιλέξτε πάροχο, και πιέστε ΟΚ για να ξεκινήσει η ανίχνευση"
@@ -7604,7 +7604,7 @@ msgid "Setup mode"
 msgstr "Επίπεδο εγκατάστασης"
 
 msgid "Setup your positioner"
-msgstr "Εγκατάσταση μοτέρ"
+msgstr "Ρύθμιση του μοτέρ σας"
 
 msgid "Setup your satellite equipment"
 msgstr "Εγκατάσταση δορυφορικού εξοπλισμού"
@@ -7751,7 +7751,7 @@ msgid "Show menu paths"
 msgstr "Εμφάνιση διαδρομών μενού"
 
 msgid "Show message when recording starts"
-msgstr "Εμφάνιση μηνύματος στην εκκίνηση της εγραφής"
+msgstr "Εμφάνιση μηνύματος στην έναρξη της εγραφής"
 
 msgid "Show movie lengths in movielist"
 msgstr "Εμφάνιση διάρκειας στη λίστα ταινιών"
@@ -8048,7 +8048,7 @@ msgid "Sorry, no details available!"
 msgstr "Λυπούμαστε, δεν υπάρχουν διαθέσιμες λεπτομέρειες!"
 
 msgid "Sorry, this tuner is in use."
-msgstr "Λυπούμαστε, αυτό το tuner ήδη χρησιμοποιείται."
+msgstr "Λυπούμαστε, αυτό το tuner χρησιμοποιείται."
 
 msgid ""
 "Sorry, your backup destination is not writeable.\n"
@@ -8500,7 +8500,7 @@ msgid "Symbol rate:"
 msgstr "Ρυθμός συμβόλων:"
 
 msgid "Sync failure moving back to origin !"
-msgstr "Αποτυχία συγχρονισμού επιστροφή στο αρχικό !"
+msgstr "Αποτυχία συγχρονισμού, επιστροφή στην αρχική θέση !"
 
 msgid "Syrian Arab Republic"
 msgstr "Συριακή Αραβική Δημοκρατία"
@@ -8663,7 +8663,7 @@ msgid ""
 msgstr ""
 "Ο οδηγός υπερσάρωσης ολοκληρώθηκε.\n"
 "\n"
-"Σημείωση: μπορείτε πάντα να ξεκινήσετε τον Οδηγό υπερσάρωσης αργότερα, μέσω\n"
+"Σημείωση: μπορείτε πάντα να ξεκινήσετε τον oδηγό υπερσάρωσης αργότερα, μέσω\n"
 "\n"
 "Μενού->Εγκατάσταση->Σύστημα->Ήχος/Εικόνα->Οδηγός υπερσάρωσης"
 
@@ -8846,7 +8846,7 @@ msgid "This option allows you to configure the Colorimetry for HDR."
 msgstr "Αυτή η επιλογή επιτρέπει τη ρύθμιση της χρωματομετρίας για το HDR."
 
 msgid "This option allows you to configure the Colorspace from Auto to RGB"
-msgstr "Αυτή η επιλογή επιτρέπει τη ρύθμιση του Χρωματικού Εύρους από το Αυτόματο σε RGB"
+msgstr "Αυτή η επιλογή επιτρέπει τη ρύθμιση του Χρωματικού Εύρους από Αυτόματο σε RGB"
 
 msgid "This option allows you to configure the HDR type."
 msgstr "Αυτή η επιλογή επιτρέπει τη ρύθμιση του τύπου HDR."
@@ -8873,7 +8873,7 @@ msgid "This option allows you to force the HLG modes for UHD"
 msgstr "Αυτή η επιλογή επιτρέπει την αναγκαστική ενεργοποίηση των λειτουργιών HGL για UHD"
 
 msgid "This option allows you to hide and sort menu entries. When selecting user you can change order and hide menu items via the blue button. With the user defined hidden the blue button is not shown in the menus"
-msgstr "Αυτή η επιλογή επιτρέπει την απόκρυψη και την ταξινόμηση των στοιχείων των μενού. Κατά την επιλογή από τον χρήστη, μπορείτε να αλλάξετε τη σειρά και να αποκρύψετε τα στοιχεία των μενού μέσω του μπλε πλήκτρου. Με τα ορισμένα από τον χρήστη κρυφά, το μπλε πλήκτρο δεν θα είναι ορατό στα μενού"
+msgstr "Αυτή η επιλογή επιτρέπει την απόκρυψη και την ταξινόμηση των στοιχείων των μενού. Με την επιλογή 'ορισμένο από τον χρήστη', μπορείτε να αλλάξετε τη σειρά και να αποκρύψετε τα στοιχεία των μενού μέσω του μπλε πλήκτρου. Με τα ορισμένα από τον χρήστη κρυφά, το μπλε πλήκτρο δεν θα είναι ορατό στα μενού"
 
 msgid "This option allows you to power off the display."
 msgstr "Αυτή η επιλογή επιτρέπει την απενεργοποίηση της οθόνης πρόσοψης."
@@ -8953,7 +8953,7 @@ msgid ""
 msgstr ""
 "Αυτό το τεστ ελέγχει για ρυθμισμένους nameservers.\n"
 "Αν λάβετε το μήνυμα \"μη επιβεβαιωμένο\":\n"
-"- παρακαλούμε ελέγξτε το DHCP, την καλωδίωση και την εγκατάσταση του προσαρμογέα\n"
+"- παρακαλούμε ελέγξτε τον διακομιστή DHCP, την καλωδίωση και την εγκατάσταση του προσαρμογέα\n"
 "- αν έχετε ρυθμίσει τους nameservers χειροκίνητα, παρακαλούμε επιβεβαιώστε τα δεδομένα στη ρύθμιση \"Nameserver\"."
 
 msgid ""
@@ -8976,7 +8976,7 @@ msgstr ""
 "Αυτό το τεστ ελέγχει αν υπάρχει έγκυρη IP Address στον προσαρμογέα LAN.\n"
 "Αν λάβετε το μήνυμα \"μη επιβεβαιωμένο\":\n"
 "- δεν βρέθηκε έγκυρη διεύθυνση IP\n"
-"- ελέγξτε το DHCP, την καλωδίωση και τη ρύθμιση του προσαρμογέα"
+"- ελέγξτε τον διακομιστή DHCP, την καλωδίωση και τη ρύθμιση του προσαρμογέα"
 
 msgid ""
 "This test checks whether your LAN adapter is set up for automatic IP address configuration with DHCP.\n"
@@ -8986,10 +8986,10 @@ msgid ""
 "If you get an \"enabeld\" message:\n"
 "-verify that you have a configured and working DHCP server in your network."
 msgstr ""
-"Αυτό το τεστ ελέγχει αν ο προσαρμογέας LAN έχει ρυθμιστεί να παίρνει αυτόματη διεύθυνση IP μέσω του DHCP.\n"
+"Αυτό το τεστ ελέγχει αν ο προσαρμογέας LAN έχει ρυθμιστεί να παίρνει αυτόματη διεύθυνση IP μέσω του διακομιστή DHCP.\n"
 "Αν λάβετε το μήνυμα \"απενεργοποιημένο\":\n"
 "- τότε ο προσαρμογέας είναι ρυθμισμένος για χειροκίνητη IP\n"
-"- βεβαιωθείτε ότι έχετε εισάγει τις σωστές τιμές IP στο μενού εγκατάστασης δικτύου.\n"
+"- βεβαιωθείτε ότι έχετε εισάγει τις σωστές διευθύνσεις IP στο μενού εγκατάστασης δικτύου.\n"
 "Αν λάβετε το μήνυμα \"ενεργοποιημένο\":\n"
 "- βεβαιωθείτε ότι ο διακομιστής DHCP έχει ρυθμιστεί και λειτουργεί σωστά στο δίκτυό σας."
 
@@ -9019,7 +9019,7 @@ msgid "Thursday"
 msgstr "Πέμπτη"
 
 msgid "Time"
-msgstr "Χρόνος"
+msgstr "Ώρα"
 
 msgid "Time scale"
 msgstr "Χρονική κλιμάκωση"
@@ -9201,10 +9201,10 @@ msgid "True"
 msgstr "Αληθές"
 
 msgid "Try to find used transponders in cable network.. please wait..."
-msgstr "Αναζήτηση χρησιμοποιούμενων αναμεταδοτών στο καλωδιακό δίκτυο... Παρακαλώ περιμένετε..."
+msgstr "Αναζήτηση ενεργών αναμεταδοτών στο καλωδιακό δίκτυο... Παρακαλώ περιμένετε..."
 
 msgid "Try to find used transponders in terrestrial network... please wait..."
-msgstr "Προσπάθεια εύρεσης χρησιμοποιημένων αναμεταδοτών στο επίγειο δίκτυο.... παρακαλώ περιμένετε..."
+msgstr "Προσπάθεια εύρεσης ενεργών αναμεταδοτών στο επίγειο δίκτυο.... παρακαλώ περιμένετε..."
 
 msgid "Trying to download a new packetlist. Please wait..."
 msgstr "Λήψη νέας λίστας πακέτων. Παρακαλώ περιμένετε ..."
@@ -9561,7 +9561,7 @@ msgid "Use trash can in movielist"
 msgstr "Χρήση του κάδου αχρήστων στη λίστα ταινιών"
 
 msgid "Used service scan type"
-msgstr "Χρησιμοποιημένος τύπος ανίχνευσης υπηρεσιών"
+msgstr "Επιλεγμένος τύπος ανίχνευσης υπηρεσιών"
 
 msgid "User - bouquets"
 msgstr "Μπουκέτα χρήστη"
@@ -10094,7 +10094,7 @@ msgid "When enabled, timeshift starts automatically in background after specifie
 msgstr "Όταν είναι ενεργό, η χρονομετατόπιση θα ξεκινά αυτόματα στο παρασκήνιο μετά από ορισμένο χρόνο."
 
 msgid "When enabled, use DHCP for the IP configuration."
-msgstr "Όταν είναι ενεργό, θα γίνεται χρήση του DHCP για τη ρύθμιση IP."
+msgstr "Όταν είναι ενεργό, θα γίνεται χρήση του διακομιστή DHCP για τη ρύθμιση IP."
 
 msgid "When enabled, your receiver will detect activity on the VCR SCART input."
 msgstr "Όταν είναι ενεργό, ο δέκτης θα εντοπίζει δραστηριότητα στην είσοδο του VCR SCART."
@@ -10385,9 +10385,9 @@ msgid ""
 "\n"
 "Please press OK to continue."
 msgstr ""
-"Ο δέκτης σας είναι πλέον έτοιμος για χρήση. \n"
+"Ο δέκτης σας είναι πλέον έτοιμος για χρήση.\n"
 "\n"
-"Η σύνδεσή σας στο διαδίκτυο λειτουργεί τώρα. \n"
+"Η σύνδεσή σας στο διαδίκτυο λειτουργεί τώρα.\n"
 "\n"
 "Παρακαλώ πατήστε OK για να συνεχίσετε."
 
@@ -11264,7 +11264,7 @@ msgid "remove entry"
 msgstr "διαγραφή στοιχείου"
 
 msgid "remove from parental protection"
-msgstr "διαγραφή από γονικό έλεγχο"
+msgstr "αφαίρεση από γονικό έλεγχο"
 
 msgid "remove new found flag"
 msgstr "διαγραφή σημαίας \"νέο\""
@@ -11574,7 +11574,7 @@ msgid "user defined"
 msgstr "ορισμένο από τον χρήστη"
 
 msgid "user defined hidden"
-msgstr "ορισμένα από τον χρήστη κρυφά"
+msgstr "ορισμένo από τον χρήστη κρυφά"
 
 msgid "variety show"
 msgstr "βαριετέ"
