--- a/po/hu.po
+++ b/po/hu.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-29 09:27+0200\n"
-"PO-Revision-Date: 2019-09-13 23:02+0200\n"
+"PO-Revision-Date: 2019-10-18 10:40+0200\n"
 "Last-Translator: mcfly82\n"
 "Language-Team: mcfly82 & wysless\n"
 "Language: hu_HU\n"
@@ -11,7 +11,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.2.3\n"
+"X-Generator: Poedit 2.2.1\n"
 
 msgid ""
 "\n"
@@ -189,11 +189,11 @@ msgstr "%.0f kB"
 
 #, python-format
 msgid "%.1f°E"
-msgstr ""
+msgstr "%.1f°K"
 
 #, python-format
 msgid "%.1f°W"
-msgstr ""
+msgstr "%.1f°NY"
 
 #, python-format
 msgid "%.2f GB"
@@ -1065,9 +1065,8 @@ msgstr "Arab"
 msgid "Are you sure to purge all deleted userbouquets?"
 msgstr "Biztos benne, hogy véglegesen eltávolítja az összes törölt listát?"
 
-#, fuzzy
 msgid "Are you sure to reboot to"
-msgstr "Biztos benne, hogy eltávolítja ezt a bejegyzést?"
+msgstr "Biztos benne, hogy újraindítja"
 
 #, python-format
 msgid "Are you sure to remove all %d.%d%s%s services?"
@@ -8529,7 +8528,7 @@ msgid "TRANSLATOR_INFO"
 msgstr ""
 "A fordítást készítette:\n"
 "mcfly82 & wysless\n"
-"Utolsó fordítás időpontja: 2019.09.14.\n"
+"Utolsó fordítás időpontja: 2019.10.18.\n"
 "Eredeti fordítás: MediaVox-Team, Robertut\n"
 "A magyar fordítás az OpenPLi projekthez készült.\n"
 "További információ: http://openpli.org"
@@ -11574,7 +11573,7 @@ msgid "Update bookmarks"
 msgstr "Könyvjelzők frissítése"
 
 msgid "used"
-msgstr ""
+msgstr "használt"
 
 msgid "user defined"
 msgstr "felhasználó által megadva"
@@ -11661,7 +11660,7 @@ msgid "yes (keep feeds)"
 msgstr "igen (feed-ek megtartása)"
 
 msgid "yes, but not in multi selections"
-msgstr ""
+msgstr "igen, de nem több kijelöléssel"
 
 msgid "zap"
 msgstr "ugrás"
