Greek translation update 20/10/2019
More small fixes in typos and definitions

--- a/po/el.po
+++ b/po/el.po
@@ -250,7 +250,7 @@ msgstr "%a %e/%m"
 
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
-msgstr "%a %e/%m %-H:%M"
+msgstr "%a %e/%m  %-H:%M"
 
 #, python-format
 msgid "%d B"
@@ -1096,7 +1096,7 @@ msgstr ""
 "το παρακάτω αντίγραφο ασφαλείας:\n"
 
 msgid "Are you sure you want to exit this wizard?"
-msgstr "Σίγουρα να γίνει έξοδος από αυτό τον οδηγό;"
+msgstr "Σίγουρα να γίνει έξοδος από αυτόν τον οδηγό;"
 
 msgid ""
 "Are you sure you want to restart your network interfaces?\n"
@@ -1820,7 +1820,7 @@ msgid "Clear playlist"
 msgstr "Εκκαθάριση λίστας αναπαραγωγής"
 
 msgid "Client is streaming from this box!"
-msgstr "Υπάρχει πελάτης ροής από αυτό τον δέκτη!"
+msgstr "Υπάρχει πελάτης ροής από αυτόν τον δέκτη!"
 
 msgid "Clone TV screen to LCD"
 msgstr "Κλωνοποίηση TV σε οθόνη LCD"
@@ -3275,7 +3275,7 @@ msgid "Enter the frequency step size for the tuner to use when searching for cab
 msgstr "Εισάγετε το μέγεθος βήματος της συχνότητας που θα χρησιμοποιεί το tuner κατά την αναζήτηση καλωδιακών πολυπλεξιών. Για περισσότερες πληροφορίες ανατρέξτε στο εγχειρίδιο του καλωδιακού σας παρόχου."
 
 msgid "Enter the number stored in the positioner that corresponds to this satellite."
-msgstr "Εισάγετε τον αποθηκευμένο αριθμό του μοτέρ που αντιστοιχεί σε αυτό τον δορυφόρο."
+msgstr "Εισάγετε τον αποθηκευμένο αριθμό του μοτέρ που αντιστοιχεί σε αυτόν τον δορυφόρο."
 
 msgid "Enter the service pin"
 msgstr "Εισάγετε το pin υπηρεσίας"
@@ -4232,10 +4232,10 @@ msgid "If you are using a Circular polarised LNB select 'yes', otherwise select 
 msgstr "Αν χρησιμοποιείτε ένα LNB Κυκλικής πόλωσης επιλέξτε 'ναι', αλλιώς επιλέξτε 'όχι'."
 
 msgid "If you are using a DiSEqC committed switch enter the port letter required to access the LNB used for this satellite."
-msgstr "Αν χρησιμοποιείτε ένα διακόπτη δεσμευμένης εντολής DiSEqC, εισάγετε το γράμμα της θύρας που απαιτείται για πρόσβαση στο LNB για αυτό τον δορυφόρο."
+msgstr "Αν χρησιμοποιείτε ένα διακόπτη δεσμευμένης εντολής DiSEqC, εισάγετε το γράμμα της θύρας που απαιτείται για πρόσβαση στο LNB για αυτόν τον δορυφόρο."
 
 msgid "If you are using a DiSEqC uncommitted switch enter the port number required to access the LNB used for this satellite."
-msgstr "Αν χρησιμοποιείτε ένα διακόπτη μη δεσμευμένης εντολής DiSEqC, εισάγετε το γράμμα της θύρας που απαιτείται για πρόσβαση στο LNB για αυτό τον δορυφόρο."
+msgstr "Αν χρησιμοποιείτε ένα διακόπτη μη δεσμευμένης εντολής DiSEqC, εισάγετε το γράμμα της θύρας που απαιτείται για πρόσβαση στο LNB για αυτόν τον δορυφόρο."
 
 msgid ""
 "If you see this, something is wrong with\n"
@@ -5129,7 +5129,7 @@ msgid "Multi EPG"
 msgstr "Πολλαπλός EPG"
 
 msgid "Multi channel downmix"
-msgstr "Αποκωδικοποίηση & μίξη πολυκάναλων ήχων"
+msgstr "Αποκωδικοποίηση & μίξη πολυκάναλων ροών"
 
 msgid "Multi-EPG bouquet selection"
 msgstr "Επιλογή μπουκέτων πολλαπλού EPG"
@@ -7751,7 +7751,7 @@ msgid "Show menu paths"
 msgstr "Εμφάνιση διαδρομών μενού"
 
 msgid "Show message when recording starts"
-msgstr "Εμφάνιση μηνύματος στην έναρξη της εγραφής"
+msgstr "Εμφάνιση μηνύματος στην έναρξη της εγγραφής"
 
 msgid "Show movie lengths in movielist"
 msgstr "Εμφάνιση διάρκειας στη λίστα ταινιών"
@@ -8587,7 +8587,7 @@ msgid "Testscreens"
 msgstr "Οθόνες δοκιμών"
 
 msgid "Testscreens that are helpfull to fine-tune your display"
-msgstr "Οθόνες δοκιμών που βοηθούν στο να μικρορυθμίσετε την οθόνη σας"
+msgstr "Δοκιμαστικές κάρτες που βοηθούν να μικρορυθμίσετε την οθόνη σας"
 
 msgid "Text color"
 msgstr "Χρώμα κειμένου"
@@ -9312,7 +9312,7 @@ msgid "USALS"
 msgstr "USALS"
 
 msgid "USALS automatically moves a motorised dish to the correct satellite based on the coordinates entered by the user. Without USALS each satellite will need to be setup and saved individually."
-msgstr "Το USALS μετακινεί αυτόματα το κάτοπτρο στο σωστό δορυφόρο, βασιζόμενο στις συντεταγμένες που δίνει ο χρήστης. Χωρίς το USALS κάθε δορυφόρος απαιτεί ξεχωριστή ρύθμιση και αποθήκευση."
+msgstr "Το USALS μετακινεί αυτόματα το κάτοπτρο στον σωστό δορυφόρο, βασιζόμενο στις συντεταγμένες που δίνει ο χρήστης. Χωρίς το USALS κάθε δορυφόρος απαιτεί ξεχωριστή ρύθμιση και αποθήκευση."
 
 msgid "USALS calibration"
 msgstr "Υπολογισμός USALS"
@@ -10407,7 +10407,7 @@ msgid "Your receiver will got to standby due to inactivity."
 msgstr "Ο δέκτης σας θα μεταβεί σε αναμονή εξαιτίας της αδράνειας."
 
 msgid "Your receiver will restart after pressing OK on your remote control."
-msgstr "Ο δέκτης σας θα επανεκκινηθεί πατώντας το OK στο τηλεχειριστήριο."
+msgstr "Θα γίνει επανεκκίνηση του δέκτη σας αφού πιέσετε το OK στο τηλεχειριστήριο."
 
 msgid ""
 "Your wireless LAN internet connection could not be started!\n"
@@ -10546,7 +10546,7 @@ msgid "add service to favourites"
 msgstr "προσθήκη υπηρεσίας στα αγαπημένα"
 
 msgid "add to parental protection"
-msgstr "προσθήκη στο γονικό έλεγχο"
+msgstr "προσθήκη στον γονικό έλεγχο"
 
 msgid "adult movie/drama"
 msgstr "ταινία ενηλίκων/δράμα"
