Updated Greek translation

--- a/po/el.po
+++ b/po/el.po
@@ -572,7 +572,7 @@ msgid "3D surround speaker position"
 msgstr "Θέση ηχείου περιφερικού 3D"
 
 msgid "3d mode"
-msgstr "λειτουργία 3d"
+msgstr "Λειτουργία 3D"
 
 msgid "4"
 msgstr "4"
@@ -701,7 +701,7 @@ msgid "A recording is currently running. Please stop the recording before trying
 msgstr "Μια εγγραφή είναι σε εξέλιξη. Πρέπει να σταματήσετε την εγγραφή πριν την ανίχνευση."
 
 msgid "A recording is currently running. Please stop the recording before trying to start a testing DiSEqC."
-msgstr "Μία εγγραφή βρίσκεται σε εξέλιξη. Παρακαλώ σταματήστε την εγγραφή πριν προσπαθήσετε να ξεκινήσετε τη δοκιμή ενός DiSEqC."
+msgstr "Μία εγγραφή βρίσκεται σε εξέλιξη. Παρακαλούμε σταματήστε την εγγραφή πριν ξεκινήσετε τον έλεγχο ενός DiSEqC."
 
 #, python-format
 msgid "A required tool (%s) was not found."
@@ -2720,7 +2720,7 @@ msgid "DiSEqC A/B/C/D"
 msgstr "DiSEqC A/B/C/D"
 
 msgid "DiSEqC Tester"
-msgstr "Δοκιμή DiSEqC"
+msgstr "Έλεγχος DiSEqC"
 
 msgid "DiSEqC mode"
 msgstr "Λειτουργία DiSEqC"
@@ -2730,7 +2730,7 @@ msgid "DiSEqC port %s: %s"
 msgstr "Πόρτα DiSEqC %s: %s"
 
 msgid "DiSEqC-tester settings"
-msgstr "Ρυθμίσεις δοκιμής DiSEqC"
+msgstr "Ρυθμίσεις ελέγχου DiSEqC"
 
 msgid "Did you see all eight arrow heads?"
 msgstr "Είδατε και τις οκτώ κεφαλές των βελών;"
@@ -4388,7 +4388,7 @@ msgid "Initializing storage device..."
 msgstr "Αρχικοποίηση συσκευής αποθήκευσης..."
 
 msgid "Input"
-msgstr "Μενού επιλογών"
+msgstr "Εισαγωγή"
 
 msgid "Input "
 msgstr "Εισαγωγή "
@@ -4587,7 +4587,7 @@ msgid "Keyboard data entry"
 msgstr "Εισαγωγή δεδομένων πληκτρολογίου"
 
 msgid "Keyboard map"
-msgstr "Χάρτης πληκτρολογίου"
+msgstr "Διάταξη πληκτρολογίου"
 
 msgid "Keyboard setup"
 msgstr "Ρύθμιση πληκτρολογίου"
@@ -6390,7 +6390,7 @@ msgid "Question"
 msgstr "Ερώτηση"
 
 msgid "Quick"
-msgstr "Γρήγορο"
+msgstr "Γρήγορος"
 
 msgid "Quick zap"
 msgstr "Γρήγορο ζάπινγκ"
@@ -6411,7 +6411,7 @@ msgid "Ram disk"
 msgstr "Δίσκος RAM"
 
 msgid "Random"
-msgstr "Τυχαίο"
+msgstr "Τυχαίος"
 
 #, python-format
 msgid "Rating defined by broadcaster - %d"
@@ -8581,7 +8581,7 @@ msgid "Test the network configuration of your receiver.\n"
 msgstr "Έλεγχος των ρυθμίσεων δικτύου του δέκτη σας.\n"
 
 msgid "Test type"
-msgstr "Τύπος τεστ"
+msgstr "Τύπος ελέγχου"
 
 msgid "Testscreens"
 msgstr "Οθόνες δοκιμών"
@@ -11141,7 +11141,7 @@ msgid "not supported"
 msgstr "δεν υποστηρίζεται"
 
 msgid "not tested"
-msgstr "δεν έγινε δοκιμή"
+msgstr "δεν έγινε έλεγχος"
 
 msgid "not_tested"
 msgstr "μη_δοκιμασμένο"
@@ -11559,7 +11559,7 @@ msgid "unpublished"
 msgstr "ανέκδοτο"
 
 msgid "untestable"
-msgstr "μη δυνατή δοκιμή"
+msgstr "μη εφικτός έλεγχος"
 
 msgid "until standby/restart"
 msgstr "μέχρι την αναμονή/επανεκκίνηση"
